tests/ui/borrowck/issue-81899.stderr
error[E0080]: evaluation panicked: explicit panic
  --> $DIR/issue-81899.rs:6:24
   |
LL | const _CONST: &[u8] = &f(&[], |_| {});
   |                        ^^^^^^^^^^^^^^ evaluation of constant value failed here
   |
note: inside `f::<{closure@$DIR/issue-81899.rs:6:31: 6:34}>`
  --> $DIR/issue-81899.rs:13:5
   |
LL |     panic!()
   |     ^^^^^^^^ the failure occurred here

note: erroneous constant encountered
  --> $DIR/issue-81899.rs:6:23
   |
LL | const _CONST: &[u8] = &f(&[], |_| {});
   |                       ^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0080`.
